--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -31,7 +31,7 @@ body {
   /* width: 100vw; */
   /* max-width: 100%; */
   height: 198.05px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   gap: 1rem;
   align-items: center;
@@ -72,7 +72,7 @@ body {
   width: 82px;
   height: 142px;
   z-index: 10;
-  border: 2px solid white;
+  /* border: 2px solid white; */
 }
 .slash-2,
 .slash-4 {
@@ -87,21 +87,21 @@ body {
 #about-hero {
   position: relative;
   height: 1483px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
 /* hero-right-container */
 .hero-right-container {
   position: absolute;
   right: 82px;
   width: 1187px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   height: 268px;
   margin-top: 113px;
 }
 .hero-right-content {
   width: 937px;
   height: 145px;
-  border: 2px solid white;
+  /* border: 2px solid white; */
 }
 .hero-right-content > p {
   color: #fff;
@@ -202,7 +202,7 @@ body {
   left: 22%;
   height: 856px;
   min-width: 1222px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 .core-title {
   display: flex;
@@ -229,7 +229,7 @@ body {
 .core-2 {
   height: 526.42px;
   width: 283px;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   display: flex;
   flex-direction: column;
   margin-right: 40px;
@@ -282,7 +282,7 @@ body {
 .core-1 {
   height: 814px;
   width: 283px;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   margin-right: 70px;
   margin-top: -160px;
 }
@@ -314,7 +314,7 @@ body {
 .core-3 {
   width: 283px;
   height: 530px;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   margin-top: 57px;
 }
 .coreblock3 {
@@ -391,13 +391,11 @@ body {
 /* reach us */
 .about-contact {
   height: 219px;
-  /* width: 100vw; */
-  /* max-width: 100%; */
-  border: 2px solid purple;
+  /* border: 2px solid purple; */
   position: relative;
   display: flex;
   justify-content: space-between;
-  margin: 125px 0;
+  margin: 42px 0;
 }
 .about-contact-content {
   width: 625.145px;
@@ -423,7 +421,7 @@ body {
 .about-contact-details {
   width: 1101px;
   height: inherit;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -470,7 +468,7 @@ body {
   height: 453px;
   /* width: 100vw; */
   max-width: 100%;
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -478,7 +476,7 @@ body {
 .about-last-left {
   height: 266px;
   width: 871px;
-  border: 2px solid green;
+  /* border: 2px solid green; */
   display: flex;
   flex-direction: column;
 }
@@ -499,7 +497,7 @@ body {
 .about-last-right {
   position: relative;
   width: 795.15px;
-  border: 2px solid white;
+  /* border: 2px solid white; */
 }
 .ar-content1 {
   font-family: formula-bold;
@@ -554,6 +552,15 @@ body {
   width: 560px;
   background-color: #d21717;
   margin-top: 18px;
+}
+#al-last-left-navigation-1200 {
+  display: none;
+}
+.about-arrow-1200{
+  display:none;
+}
+.about-contact-details-1200{
+  display: none;
 }
 
 /* greater than 1807px width */
@@ -743,5 +750,618 @@ body {
 }
 /* between 1400px to 1499px */
 @media (min-width: 1400px) and (max-width: 1499px) {
-  
+  #about-vertical-title {
+    display: none;
+  }
+  #about-hero{
+    height:1218px;
+  }
+  #main-title {
+    font-size: 6rem;
+  }
+  .title1 {
+    font-size: 3rem;
+    margin-bottom: -1.9rem;
+  }
+  .title2 {
+    font-size: 2rem;
+    margin-top: -1.6rem;
+  }
+  .slash {
+    width: 63px;
+    height: 107px;
+  }
+  .hero-car {
+    left: calc(-15%);
+    left: calc(-15%);
+  }
+  .car-front-text {
+    left: 9%;
+  }
+  .hero-right-container {
+    width: 798px;
+  }
+  .hero-right-content {
+    width: 516px;
+    height: unset;
+  }
+  .hero-right-content > p {
+    font-size: 1rem;
+  }
+  #corevalue-section {
+    left: 8.5%;
+  }
+  .core-title1 {
+    font-size: 7.75rem;
+  }
+  .core-1-title > p,
+  .core-2-title > p,
+  .core-3-title > p {
+    font-size: 1.5rem;
+  }
+  .core-description > p {
+    font-size: 1rem;
+  }
+  .coresection-content {
+    right: 12%;
+  }
+  .aboutline-1 {
+    width: 131px;
+    height: 169px;
+    top: 42%;
+  }
+  .aboutline-2 {
+    width: 196px;
+    height: 304px;
+    top: 42%;
+  }
+  .aboutline-3 {
+    width: 144px;
+    height: 248px;
+    top: 45%;
+  }
+  .about-last {
+    height: unset;
+    justify-content: space-between;
+  }
+  .about-left {
+    justify-content: space-between;
+  }
+  .about-last-left {
+    width: 534px;
+    margin-left: 63px;
+    height:201px;
+    
+  }
+  .about-last-right {
+    width: 518.15px;
+  }
+  .al-content1 {
+    font-size: 2.3rem;
+  }
+  .al-content2 {
+    width: 534px;
+    font-size: 1.2rem;
+  }
+  .ar-content1 {
+    margin-left: -1px;
+  }
+  .ar-content2 {
+    font-size: 5.25rem;
+  }
+  .ar-img {
+    top: 15%;
+    right: -24%;
+  }
+  #al-last-left-navigation {
+    display: none;
+  }
+  #al-last-left-navigation-1200 {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .al-page-navigation-1200 {
+    display: flex;
+    gap: 195px;
+    margin-top: 4.9rem;
+  }
+  .al-pn-img1-1200 {
+    width: 28px;
+    height: 20px;
+  }
+  .al-pn-img2-1200 {
+    width: 28px;
+    height: 20px;
+    transform: rotate(180deg);
+  }
+  .al-pn-1-1200,
+  .al-pn-2-1200 {
+    display: flex;
+    gap: 1rem;
+  }
+  .al-pn-1-1200 > p,
+  .al-pn-2-1200 > p,
+  .al-pn-x-1200 {
+    color: #e3e3e3;
+    font-family: formula-bold;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .al-pn-border-1200 {
+    height: 4px;
+    width: 818px;
+    background-color: #d21717;
+    margin-top: 18px;
+  }
+  .about-contact{
+    height: 274px;
+    margin: 100px 0;
+  }
+  .about-contact-details {
+    display: none;
+  }
+  .about-arrow-1200 {
+    display: unset;
+    width: 573px;
+    height: 44px;
+    position: absolute;
+    bottom: 0%;
+  }
+  .about-contact-details-1200{
+    display:unset;
+  }
+  /* 1200 */
+  .about-contact-details-1200 {
+    width: 532px;
+    height: inherit;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ac-details-1-1200 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100%;
+  }
+  .acd-1-1200,
+  .acd-2-1200,
+  .acd-3-1200 {
+    display: flex;
+    align-items: center;
+  }
+  .acd-1-1200 {
+    padding-right: 6.625rem;
+  }
+  .acd-1-1200 > img,
+  .acd-2-1200 > img,
+  .acd-3-1200 > img {
+    width: 56px;
+    height: 56px;
+  }
+  .acd-1-1200 > p,
+  .acd-2-1200 > p,
+  .acd-3-1200 > p {
+    color: #989494;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 1.5rem;
+  }
+}
+/* between 1300px to 1399px */
+@media (min-width: 1300px) and (max-width: 1400px) {
+  #about-vertical-title {
+    display: none;
+  }
+  #about-hero{
+    height:1218px;
+  }
+  #main-title {
+    font-size: 6rem;
+  }
+  .title1 {
+    font-size: 3rem;
+    margin-bottom: -1.9rem;
+  }
+  .title2 {
+    font-size: 2rem;
+    margin-top: -1.6rem;
+  }
+  .slash {
+    width: 63px;
+    height: 107px;
+  }
+  .hero-car {
+    left: calc(-15%);
+    left: calc(-15%);
+  }
+  .car-front-text {
+    left: 11%;
+  }
+  .hero-right-container {
+    width: 764px;
+  }
+  .hero-right-content {
+    width: 516px;
+    height: unset;
+  }
+  .hero-right-content > p {
+    font-size: 1rem;
+  }
+  #corevalue-section {
+    left: 6%;
+  }
+  .core-title1 {
+    font-size: 7.75rem;
+  }
+  .core-1-title > p,
+  .core-2-title > p,
+  .core-3-title > p {
+    font-size: 1.5rem;
+  }
+  .core-description > p {
+    font-size: 1rem;
+  }
+  .coresection-content {
+    right: 12%;
+  }
+  .aboutline-1 {
+    width: 131px;
+    height: 169px;
+    top: 42%;
+  }
+  .aboutline-2 {
+    width: 196px;
+    height: 304px;
+    top: 42%;
+  }
+  .aboutline-3 {
+    width: 144px;
+    height: 248px;
+    top: 45%;
+  }
+  .about-last {
+    height: unset;
+    justify-content: space-between;
+  }
+  .about-left {
+    justify-content: space-between;
+  }
+  .about-last-left {
+    width: 534px;
+    margin-left: 63px;
+    height:235px;
+    padding-top:1.3rem;
+
+  }
+  .about-last-right {
+    width: 518.15px;
+  }
+  .al-content1 {
+    font-size: 2.3rem;
+  }
+  .al-content2 {
+    width: 534px;
+    font-size: 1.2rem;
+  }
+  .ar-content1 {
+    margin-left: -1px;
+  }
+  .ar-content2 {
+    font-size: 5.25rem;
+  }
+  .ar-img {
+    top: 15%;
+    right: -24%;
+  }
+  #al-last-left-navigation {
+    display: none;
+  }
+  #al-last-left-navigation-1200 {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .al-page-navigation-1200 {
+    display: flex;
+    gap: 195px;
+    margin-top: 4.9rem;
+  }
+  .al-pn-img1-1200 {
+    width: 28px;
+    height: 20px;
+  }
+  .al-pn-img2-1200 {
+    width: 28px;
+    height: 20px;
+    transform: rotate(180deg);
+  }
+  .al-pn-1-1200,
+  .al-pn-2-1200 {
+    display: flex;
+    gap: 1rem;
+  }
+  .al-pn-1-1200 > p,
+  .al-pn-2-1200 > p,
+  .al-pn-x-1200 {
+    color: #e3e3e3;
+    font-family: formula-bold;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .al-pn-border-1200 {
+    height: 4px;
+    width: 818px;
+    background-color: #d21717;
+    margin-top: 18px;
+  }
+  .about-contact{
+    height: 274px;
+    margin: 100px 0;
+
+  }
+  .about-contact-details {
+    display: none;
+  }
+  .about-arrow-1200 {
+    display: unset;
+    width: 573px;
+    height: 44px;
+    position: absolute;
+    bottom: 0%;
+  }
+  .about-contact-details-1200{
+    display:unset;
+  }
+  /* 1200 */
+  .about-contact-details-1200 {
+    width: 532px;
+    height: inherit;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ac-details-1-1200 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100%;
+  }
+  .acd-1-1200,
+  .acd-2-1200,
+  .acd-3-1200 {
+    display: flex;
+    align-items: center;
+  }
+  .acd-1-1200 {
+    padding-right: 6.625rem;
+  }
+  .acd-1-1200 > img,
+  .acd-2-1200 > img,
+  .acd-3-1200 > img {
+    width: 56px;
+    height: 56px;
+  }
+  .acd-1-1200 > p,
+  .acd-2-1200 > p,
+  .acd-3-1200 > p {
+    color: #989494;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 1.5rem;
+  }
+}
+/* between 1200px to 1299px */
+@media (min-width: 1200px) and (max-width: 1300px) {
+  #about-vertical-title {
+    display: none;
+  }
+  #about-hero{
+    height:1218px;
+  }
+  #main-title {
+    font-size: 6rem;
+  }
+  .title1 {
+    font-size: 3rem;
+    margin-bottom: -1.9rem;
+  }
+  .title2 {
+    font-size: 2rem;
+    margin-top: -1.6rem;
+  }
+  .slash {
+    width: 63px;
+    height: 107px;
+  }
+  .hero-car {
+    left: calc(-15%);
+    left: calc(-15%);
+  }
+  .car-front-text {
+    left: 13%;
+  }
+  .hero-right-container {
+    width: 717px;
+  }
+  .hero-right-content {
+    width: 516px;
+    height: unset;
+  }
+  .hero-right-content > p {
+    font-size: 1rem;
+  }
+  #corevalue-section {
+    left: 2%;
+  }
+  .core-title1 {
+    font-size: 7.75rem;
+  }
+  .core-1-title > p,
+  .core-2-title > p,
+  .core-3-title > p {
+    font-size: 1.5rem;
+  }
+  .core-description > p {
+    font-size: 1rem;
+  }
+  .coresection-content {
+    right: 12%;
+  }
+  .aboutline-1 {
+    width: 131px;
+    height: 169px;
+    top: 42%;
+  }
+  .aboutline-2 {
+    width: 196px;
+    height: 304px;
+    top: 42%;
+  }
+  .aboutline-3 {
+    width: 144px;
+    height: 248px;
+    top: 45%;
+  }
+  .about-last {
+    height: unset;
+    justify-content: space-between;
+  }
+  .about-left {
+    justify-content: space-between;
+  }
+  .about-last-left {
+    width: 467px;
+    margin-left: 63px;
+    height:180px;
+  }
+  .about-last-right {
+    width: 518.15px;
+  }
+  .al-content1 {
+    font-size: 2rem;
+  }
+  .al-content2 {
+    width: 467px;
+    font-size: 1rem;
+  }
+  .ar-content1 {
+    margin-left: -1px;
+  }
+  .ar-content2 {
+    font-size: 5.25rem;
+  }
+  .ar-img {
+    top: 15%;
+    right: -24%;
+  }
+  #al-last-left-navigation {
+    display: none;
+  }
+  #al-last-left-navigation-1200 {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .al-page-navigation-1200 {
+    display: flex;
+    gap: 195px;
+    margin-top: 4.9rem;
+  }
+  .al-pn-img1-1200 {
+    width: 28px;
+    height: 20px;
+  }
+  .al-pn-img2-1200 {
+    width: 28px;
+    height: 20px;
+    transform: rotate(180deg);
+  }
+  .al-pn-1-1200,
+  .al-pn-2-1200 {
+    display: flex;
+    gap: 1rem;
+  }
+  .al-pn-1-1200 > p,
+  .al-pn-2-1200 > p,
+  .al-pn-x-1200 {
+    color: #e3e3e3;
+    font-family: formula-bold;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .al-pn-border-1200 {
+    height: 4px;
+    width: 818px;
+    background-color: #d21717;
+    margin-top: 18px;
+  }
+  .about-contact{
+    height: 274px;
+    margin: 100px 0;
+
+  }
+  .about-contact-details {
+    display: none;
+  }
+  .about-arrow-1200 {
+    display: unset;
+    width: 573px;
+    height: 44px;
+    position: absolute;
+    bottom: 0%;
+  }
+  .about-contact-details-1200{
+    display:unset;
+  }
+  /* 1200 */
+  .about-contact-details-1200 {
+    width: 532px;
+    height: inherit;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ac-details-1-1200 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100%;
+  }
+  .acd-1-1200,
+  .acd-2-1200,
+  .acd-3-1200 {
+    display: flex;
+    align-items: center;
+  }
+  .acd-1-1200 {
+    padding-right: 6.625rem;
+  }
+  .acd-1-1200 > img,
+  .acd-2-1200 > img,
+  .acd-3-1200 > img {
+    width: 56px;
+    height: 56px;
+  }
+  .acd-1-1200 > p,
+  .acd-2-1200 > p,
+  .acd-3-1200 > p {
+    color: #989494;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-weight: 500;
+    padding-left: 1.5rem;
+  }
 }
