--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -76,12 +76,12 @@
   #nav-menu li {
     font-size: 18px;
     margin-bottom: 56px;
+    font-family: formula-bold;
   }
   .res-x-logo {
     position: absolute;
     display: unset;
-    bottom: 77px;
-    
+    bottom: 77px; 
   }
   .navbar-menu ul{
     gap:0;
@@ -592,6 +592,10 @@
     top:calc(50%);
     left:calc(13%);
   }
+  #category-dropmenu{
+    display: none;
+  }
+ 
 }
 @media (min-width:500px) and (max-width:780px) {
   #footer-card{
