--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -379,15 +379,19 @@ header {
 .cmg-soon {
     background-color: transparent;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: -28rem;
+    overflow: hidden;
 }
 
 .img1 {
     height: 32rem;
-    width: 21rem;
+    width: 22rem;
     margin-bottom: 1rem;
-    margin-left: 1rem;
+    margin-top: -0.7rem;
+    margin-left: -1rem;
+    position: relative;
+    z-index: 1;
 }
 
 .r-man {
@@ -396,9 +400,78 @@ header {
     justify-content: center;
     align-items: center;
     font-family: Montserrat;
+    margin-left: -10rem;
 }
 
 .r-man h1 {
     margin-top: -2.4rem;
     font-size: 5rem;
+    font-weight: 700;
+    position: relative;
+    z-index: 2;
+    transform: scaleX(1.2);
+    margin-left: -6rem;
+}
+
+.rect1 {
+    height: 10rem;
+    margin-top: 3rem;
+    margin-left: 8rem;
+    position: absolute;
+}
+
+.left-rect {
+    margin-left: -2.5rem;
+    margin-top: 26rem;
+    display: flex;
+}
+
+.rect2 {
+    height: 11rem;
+    margin-top: -11rem;
+}
+
+.rect3 {
+    height: 11rem;
+}
+
+.right-rect {
+    display: flex;
+    margin-right: -6.5rem;
+}
+
+.right-rect img {
+    height: 10rem;
+}
+
+.rect4 {
+    margin-top: 9.9rem;
+    margin-right: -6.3rem;
+}
+
+.apps {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-left: 8rem;
+}
+
+.apps img {
+    height: 4rem;
+    width: 13rem;
+}
+
+.rect6 {
+    height: 10rem;
+    margin-left: 71.5vw;
+    overflow: hidden;
+    margin-top: -1.5rem;
+    margin-bottom: -4.5rem;
+}
+
+.lights-out{
+    height: 2.8rem;
+    width: 14rem;
+    margin-left: -1.3rem;
 }
